# mcu-playground

./: .gitignore  start-listening-wifi.sh
arduino-i2c-meter/: arduino-i2c-meter.ino
arduino-i2c-scanner-master/: arduino-i2c-scanner-master.ino
arduino-i2c-scanner-slave/: arduino-i2c-scanner-slave.ino
arduino-i2c-sniffer/: arduino-i2c-sniffer.ino
arduino-uart-test/: arduino-uart-test.ino
due-i2c-sniffer/: due-i2c-sniffer.ino
esp32-adc-testing/: platformio.ini
esp32-jattec-sniffer-wifi-pwm-can/: platformio.ini
esp32-jattec-test/: listen.sh
esp32-project-candela/: IMPORTANT_NOTE
esp32-project-grabber/: .gitignore  CMakeLists.txt  nt60-cheatsheet.txt  prepare-release-binary.sh
esp32-project-interwind/: .gitignore  CMakeLists.txt  make-offline-panel-page.sh  panel.html  prepare-release-binary.sh
esp32-project-nosedive/: .gitignore  CMakeLists.txt  building.md  make-offline-monitor-page.sh  (+5 more)
esp32-project-nosedive/main/: CMakeLists.txt  adc-common.c  bmx280.h  bmx280_bits.h  common-adc.c  common-i2c.c  driver-bmx280.c  driver-bmx280.h  driver-hall.c  driver-hall.h  driver-lis3dh.c  driver-lis3dh.h  driver-max6675.c  driver-max6675.h  driver-ntc.c  driver-ntc.h  driver-pca9685.c  driver-pca9685.h  driver-power.c  driver-power.h  driver-pwm-reader.c  driver-pwm-reader.h  driver-speed.c  driver-speed.h  driver-tpa626.c  driver-tpa626.h  driver-w25q128jv.c  driver-w25q128jv.h  driver-w25q64.c  driver-w25q64.h  heartbeat.c  http-server.c  http-streamer.c  http-tuner.c  main.c  nosedive.h  panel.html  sensor-bmx280.c  sensor-esp-temp.c  sensor-hall.c  (+14 more)
(+114 files in other folders)
