idf_component_register(
	SRCS
	"main.c"
	"http-streamer.c"
	"http-tuner.c"
	"driver-bmx280.c"
	"driver-tpa626.c"
	"driver-lis3dh.c"
	"driver-pca9685.c"
	"driver-max6675.c"
	"sensor-bmx280.c"
	"sensor-tpa626.c"
	"sensor-lis3dh.c"
	"sensor-pca9685.c"
	"sensor-max6675.c"
	"sensor-ntc.c"
	"common-i2c.c"
	INCLUDE_DIRS
	"."
	EMBED_FILES
	"panel.html"
)
