idf_component_register(
	SRCS
	"main.c"
	"http-streamer.c"
	"http-tuner.c"
	"driver-bmx280.c"
	"driver-tpa626.c"
	"driver-lis3dh.c"
	"driver-pca9685.c"
	"driver-max6675.c"
	"driver-w25q128jv.c"
	"driver-hall.c"
	"driver-pwm-reader.c"
	"sensor-esp-temp.c"
	"sensor-bmx280.c"
	"sensor-tpa626.c"
	"sensor-lis3dh.c"
	"sensor-pca9685.c"
	"sensor-max6675.c"
	"sensor-w25q128jv.c"
	"sensor-hall.c"
	"sensor-pwm-reader.c"
	"sensor-ntc.c"
	"sensor-speed.c"
	"sensor-power.c"
	"common-i2c.c"
	"system-info.c"
	INCLUDE_DIRS
	"."
	EMBED_FILES
	"panel.html.gz"
	"monitor-offline.html.gz"
)
