idf_component_register(
	SRCS
	"main.c"
	"tasks.c"
	"streamer-websocket.c"
	"streamer-serial.c"
	"http-tuner.c"
	"common-i2c.c"
	"system-info.c"
	"driver-bmx280.c"
	"driver-tpa626.c"
	"driver-lis3dh.c"
	"driver-pca9685.c"
	"driver-max6675.c"
	"driver-w25q128jv.c"
	"driver-hall.c"
	"driver-pwm-reader.c"
	"driver-ntc.c"
	"driver-speed.c"
	"driver-power.c"
	INCLUDE_DIRS
	"."
	EMBED_FILES
	"monitor-offline.html.gz"
)
